fix horizontal scrolling

--- a/src/MainContainer/MainContainer.scss
+++ b/src/MainContainer/MainContainer.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   background: #ff5c19;
   min-height: 100%;
-  overflow-y: hidden;
+  overflow-x: hidden;
 
   .facePoster {
     width: 100px;
